# uri-codes

./: CMakeLists.txt  README.md  install
C/: 1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1007.c  1008.c  1009.c  1010.c  1011.c  1012.c  1013.c  1014.c  1015.c  1016.c  1017.c  1018.c  1019.c  1020.c  1021.c  1035.c  1036.c  1037.c  1038.c  1040.c  1041.c  1042.c  1043.c  1044.c  1045.c  1046.c  1047.c  1048.c  1049.c  1050.c  1051.c  1052.c  1059.c  1060.c  (+80 more)
C++/: 1113.cpp  1114.cpp  1134.cpp  1142.cpp  1143.cpp  1534.cpp  1589.cpp  1866.cpp  1963.cpp  2003.cpp  2006.cpp  2028.cpp  2029.cpp  2059.cpp  CMakeLists.txt
java/: 1921.java  1929.java
python_python3/: 1914.py  1933.py  1959.py  1961.py  1984.py  2031.py
