#instruções para compilar o executável
# add_executable(projeto1 projeto-1.c)
add_executable( 1145 1145.c )
add_executable( 1181 1181.c )
add_executable( 1013 1013.c )
add_executable( 1478 1478.c )
add_executable( 1004 1004.c )
add_executable( 1061 1061.c )
add_executable( 1188 1188.c )
add_executable( 1003 1003.c )
add_executable( 1010 1010.c )
add_executable( 1067 1067.c )
add_executable( 1985 1985.c )
add_executable( 1015 1015.c )
add_executable( 1983 1983.c )
add_executable( 1180 1180.c )
add_executable( 1021 1021.c )
add_executable( 1174 1174.c )
add_executable( 1066 1066.c )
add_executable( 1005 1005.c )
add_executable( 1040 1040.c )
add_executable( 1150 1150.c )
add_executable( 1044 1044.c )
add_executable( 2057 2057.c )
add_executable( 1065 1065.c )
add_executable( 1002 1002.c )
add_executable( 1133 1133.c )
add_executable( 1160 1160.c )
add_executable( 1001 1001.c )
add_executable( 1156 1156.c )
add_executable( 1151 1151.c )
add_executable( 1149 1149.c )
add_executable( 1924 1924.c )
add_executable( 1046 1046.c )
add_executable( 1865 1865.c )
add_executable( 1435 1435.c )
add_executable( 1016 1016.c )
add_executable( 1019 1019.c )
add_executable( 1182 1182.c )
add_executable( 1789 1789.c )
add_executable( 1035 1035.c )
add_executable( 1051 1051.c )
add_executable( 1930 1930.c )
add_executable( 1564 1564.c )
add_executable( 1007 1007.c )
add_executable( 1190 1190.c )
add_executable( 1070 1070.c )
add_executable( 1073 1073.c )
add_executable( 1095 1095.c )
add_executable( 1189 1189.c )
add_executable( 1072 1072.c )
add_executable( 1158 1158.c )
add_executable( 1038 1038.c )
add_executable( 1101 1101.c )
add_executable( 1098 1098.c )
add_executable( 1012 1012.c )
add_executable( 1184 1184.c )
add_executable( 1059 1059.c )
add_executable( 1079 1079.c )
add_executable( 1186 1186.c )
add_executable( 1153 1153.c )
add_executable( 1185 1185.c )
add_executable( 1099 1099.c )
add_executable( 1018 1018.c )
add_executable( 2061 2061.c )
add_executable( 1962 1962.c )
add_executable( 1187 1187.c )
add_executable( 1144 1144.c )
add_executable( 1159 1159.c )
add_executable( 1006 1006.c )
add_executable( 1132 1132.c )
add_executable( 1096 1096.c )
add_executable( 1009 1009.c )
add_executable( 1164 1164.c )
add_executable( 1020 1020.c )
add_executable( 1036 1036.c )
add_executable( 1047 1047.c )
add_executable( 1074 1074.c )
add_executable( 1011 1011.c )
add_executable( 1183 1183.c )
add_executable( 1173 1173.c )
add_executable( 1017 1017.c )
add_executable( 1172 1172.c )
add_executable( 1080 1080.c )
add_executable( 1097 1097.c )
add_executable( 1064 1064.c )
add_executable( 1045 1045.c )
add_executable( 1037 1037.c )
add_executable( 1154 1154.c )
add_executable( 1116 1116.c )
add_executable( 1041 1041.c )
add_executable( 1050 1050.c )
add_executable( 1052 1052.c )
add_executable( 1094 1094.c )
add_executable( 1049 1049.c )
add_executable( 1827 1827.c )
add_executable( 1557 1557.c )
add_executable( 1175 1175.c )
add_executable( 1014 1014.c )
add_executable( 1157 1157.c )
add_executable( 1534 1534.c )
add_executable( 1759 1759.c )
add_executable( 1075 1075.c )
add_executable( 1042 1042.c )
add_executable( 1115 1115.c )
add_executable( 1043 1043.c )
add_executable( 1071 1071.c )
add_executable( 1165 1165.c )
add_executable( 1176 1176.c )
add_executable( 1146 1146.c )
add_executable( 1179 1179.c )
add_executable( 2060 2060.c )
add_executable( 1118 1118.c )
add_executable( 1048 1048.c )
add_executable( 1117 1117.c )
add_executable( 1155 1155.c )
add_executable( 1008 1008.c )
add_executable( 1131 1131.c )
add_executable( 1177 1177.c )
add_executable( 1060 1060.c )
add_executable( 1178 1178.c )


target_link_libraries(1145 m)
target_link_libraries(1181 m)
target_link_libraries(1013 m)
target_link_libraries(1478 m)
target_link_libraries(1004 m)
target_link_libraries(1061 m)
target_link_libraries(1188 m)
target_link_libraries(1003 m)
target_link_libraries(1010 m)
target_link_libraries(1067 m)
target_link_libraries(1985 m)
target_link_libraries(1015 m)
target_link_libraries(1983 m)
target_link_libraries(1180 m)
target_link_libraries(1021 m)
target_link_libraries(1174 m)
target_link_libraries(1066 m)
target_link_libraries(1005 m)
target_link_libraries(1040 m)
target_link_libraries(1150 m)
target_link_libraries(1044 m)
target_link_libraries(2057 m)
target_link_libraries(1065 m)
target_link_libraries(1002 m)
target_link_libraries(1133 m)
target_link_libraries(1160 m)
target_link_libraries(1001 m)
target_link_libraries(1156 m)
target_link_libraries(1151 m)
target_link_libraries(1149 m)
target_link_libraries(1924 m)
target_link_libraries(1046 m)
target_link_libraries(1865 m)
target_link_libraries(1435 m)
target_link_libraries(1016 m)
target_link_libraries(1019 m)
target_link_libraries(1182 m)
target_link_libraries(1789 m)
target_link_libraries(1035 m)
target_link_libraries(1051 m)
target_link_libraries(1930 m)
target_link_libraries(1564 m)
target_link_libraries(1007 m)
target_link_libraries(1190 m)
target_link_libraries(1070 m)
target_link_libraries(1073 m)
target_link_libraries(1095 m)
target_link_libraries(1189 m)
target_link_libraries(1072 m)
target_link_libraries(1158 m)
target_link_libraries(1038 m)
target_link_libraries(1101 m)
target_link_libraries(1098 m)
target_link_libraries(1012 m)
target_link_libraries(1184 m)
target_link_libraries(1059 m)
target_link_libraries(1079 m)
target_link_libraries(1186 m)
target_link_libraries(1153 m)
target_link_libraries(1185 m)
target_link_libraries(1099 m)
target_link_libraries(1018 m)
target_link_libraries(2061 m)
target_link_libraries(1962 m)
target_link_libraries(1187 m)
target_link_libraries(1144 m)
target_link_libraries(1159 m)
target_link_libraries(1006 m)
target_link_libraries(1132 m)
target_link_libraries(1096 m)
target_link_libraries(1009 m)
target_link_libraries(1164 m)
target_link_libraries(1020 m)
target_link_libraries(1036 m)
target_link_libraries(1047 m)
target_link_libraries(1074 m)
target_link_libraries(1011 m)
target_link_libraries(1183 m)
target_link_libraries(1173 m)
target_link_libraries(1017 m)
target_link_libraries(1172 m)
target_link_libraries(1080 m)
target_link_libraries(1097 m)
target_link_libraries(1064 m)
target_link_libraries(1045 m)
target_link_libraries(1037 m)
target_link_libraries(1154 m)
target_link_libraries(1116 m)
target_link_libraries(1041 m)
target_link_libraries(1050 m)
target_link_libraries(1052 m)
target_link_libraries(1094 m)
target_link_libraries(1049 m)
target_link_libraries(1827 m)
target_link_libraries(1557 m)
target_link_libraries(1175 m)
target_link_libraries(1014 m)
target_link_libraries(1157 m)
target_link_libraries(1534 m)
target_link_libraries(1759 m)
target_link_libraries(1075 m)
target_link_libraries(1042 m)
target_link_libraries(1115 m)
target_link_libraries(1043 m)
target_link_libraries(1071 m)
target_link_libraries(1165 m)
target_link_libraries(1176 m)
target_link_libraries(1146 m)
target_link_libraries(1179 m)
target_link_libraries(2060 m)
target_link_libraries(1118 m)
target_link_libraries(1048 m)
target_link_libraries(1117 m)
target_link_libraries(1155 m)
target_link_libraries(1008 m)
target_link_libraries(1131 m)
target_link_libraries(1177 m)
target_link_libraries(1060 m)
target_link_libraries(1178 m)

#instruções para compilar o executável
# add_executable(projeto2_2 maycon_2.c)
#indica quais bibliotecas devemos ligar com o executável
# target_link_libraries()
#instala o executável na pasta bin
install (TARGETS 1145
 1181
 1013
 1478
 1004
 1061
 1188
 1003
 1010
 1067
 1985
 1015
 1983
 1180
 1021
 1174
 1066
 1005
 1040
 1150
 1044
 2057
 1065
 1002
 1133
 1160
 1001
 1156
 1151
 1149
 1924
 1046
 1865
 1435
 1016
 1019
 1182
 1789
 1035
 1051
 1930
 1564
 1007
 1190
 1070
 1073
 1095
 1189
 1072
 1158
 1038
 1101
 1098
 1012
 1184
 1059
 1079
 1186
 1153
 1185
 1099
 1018
 2061
 1962
 1187
 1144
 1159
 1006
 1132
 1096
 1009
 1164
 1020
 1036
 1047
 1074
 1011
 1183
 1173
 1017
 1172
 1080
 1097
 1064
 1045
 1037
 1154
 1116
 1041
 1050
 1052
 1094
 1049
 1827
 1557
 1175
 1014
 1157
 1534
 1759
 1075
 1042
 1115
 1043
 1071
 1165
 1176
 1146
 1179
 2060
 1118
 1048
 1117
 1155
 1008
 1131
 1177
 1060
 1178
 RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin/c/)

#instala o executável na pasta bin
# install (TARGETS projeto2_2 RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
